--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
 asgiref==3.7.2
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+crispy-bootstrap5==0.7
+cryptography==41.0.3
+defusedxml==0.7.1
 Django==4.2.4
+django-allauth==0.55.2
+django-crispy-forms==2.0
 environs==9.5.0
+idna==3.4
 marshmallow==3.20.1
+oauthlib==3.2.2
 packaging==23.1
 psycopg2-binary==2.9.7
+pycparser==2.21
+PyJWT==2.8.0
 python-dotenv==1.0.0
+python3-openid==3.2.0
+requests==2.31.0
+requests-oauthlib==1.3.1
 sqlparse==0.4.4
 tzdata==2023.3
+urllib3==2.0.4
